--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
                 I am currently working in a store as a sales assistant. I love to learn and I play different musical instruments.
             </p>
             <img src="images/profile.jpg" alt="Gabriela Acuña" width="150" class="gaby">
-            <h2>Valparaíso, Chile</h2>
+            <h2 class="valpo">Valparaíso, Chile</h2>
             <p>
                 Valparaíso is a major city, commune, seaport and naval base facility in Valparaíso Region, Chile.
                 Greater Valparaíso is the second-largest populace in the country, as well as the second-largest city in the Greater Valparaíso metro area (behind Viña del Mar). 
             </p>
             <img src="images/chile-flag.jpg" alt="Chilean Flag" width="200" class="chile">
         </section>
-        <section>
+        <section class="card">
             <h2 class="top">Web Dev Resources</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil suscipit minus obcaecati eos aliquam atque illo possimus vel. Doloremque pariatur, eius dicta nobis molestiae iure, totam repellendus mollitia quis earum quisquam possimus, eum excepturi est unde modi. Error temporibus quia officia quas suscipit adipisci, itaque nihil amet dicta ipsam deserunt?</p>
+            <nav>
+                <a href="https://www.w3schools.com/">W3Schools</a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web">MDN</a>
+                <a href="https://developer.chrome.com/docs/devtools?hl=zh-tw">DevTools</a>
+                <a href="https://coolors.co/2364aa-3da5d9-73bfb8-fec601-ea7317">Coolors</a>
+            </nav>
         </section>
     </main>
     <footer>
