--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WDD 131 - Media Query Example</title>
-        <meta name="description" content="">
+        <meta name="description" content="Media query example excercise">
         <meta name="author" content="Gabriela Acuña">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
