--- a/form.html
+++ b/form.html
@@ -40,12 +40,13 @@
         <br><br>
         <label>Useful Features:</label><br>
         <input type="checkbox" id="feature1" name="usefulFeatures" value="Feature 1">
-        <label for="feature1">Feature 1</label><br>
+        <label for="feature1">Durability</label><br>
         <input type="checkbox" id="feature2" name="usefulFeatures" value="Feature 2">
-        <label for="feature2">Feature 2</label><br>
+        <label for="feature2">Ease of Use</label><br>
         <input type="checkbox" id="feature3" name="usefulFeatures" value="Feature 3">
-        <label for="feature3">Feature 3</label><br><br>
-
+        <label for="feature3">Performance</label><br><br>
+        <input type="checkbox" id="feature4" name="usefulFeatures" value="Feature 4">
+        <label for="feature3">Design</label><br><br>
         <label for="review">Written Review:</label><br>
         <textarea id="review" name="review" rows="4" cols="50"></textarea>
         <br><br>
@@ -54,7 +55,7 @@
         <input type="text" id="userName" name="userName">
         <br><br>
 
-        <input type="submit" value="Submit Review">
+        <input type="submit">
     </form>
     <footer>        
         <p>
