--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
         <input type="checkbox" id="feature2" name="usefulFeatures" value="Feature 2">
         <label for="feature2">Ease of Use</label><br>
         <input type="checkbox" id="feature3" name="usefulFeatures" value="Feature 3">
-        <label for="feature3">Performance</label><br><br>
+        <label for="feature3">Performance</label><br>
         <input type="checkbox" id="feature4" name="usefulFeatures" value="Feature 4">
         <label for="feature3">Design</label><br><br>
         <label for="review">Written Review:</label><br>
