--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -33,6 +33,10 @@
         </div>
         <div>
             <h2>Wireframe</h2>
+            <p>Phone wireframe</p>
+            <img src="images/phone_wireframe.png" alt="phone wireframe" class="phone">
+            <p>Wider screen wireframe</p>
+            <img src="images/large_wireframe.png" alt="large wireframe">
         </div>
     </main>
     
