--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -34,9 +34,9 @@
         <div>
             <h2>Wireframe</h2>
             <p>Phone wireframe</p>
-            <img src="images/phone_wireframe.png" alt="phone wireframe" class="phone">
+            <img src="images/phone_wireframe.webp" alt="phone wireframe" class="phone">
             <p>Wider screen wireframe</p>
-            <img src="images/large_wireframe.png" alt="large wireframe">
+            <img src="images/large_wireframe.webp" alt="large wireframe">
         </div>
     </main>
     
