--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -28,8 +28,15 @@
             <p>Where and when do the classes take place?</p>            
         </div>
         <div>
+            <h2>Color Schema</h2>
+            <p>Background color for headings and footer: #07BEB8</p>
+            <p>Backgroun color for cards: #9CEAEF</p>
+        </div>
+        <div>
             <h2>Typography</h2>
-            <p>Two fonts: one for headings and one for paragraphs and others</p>
+            <p>Two fonts: </p>
+            <p>For headings:'poppins', sans-seriff</p>
+            <p>For paragraphs and others: 'lato', sans-seriff</p>
         </div>
         <div>
             <h2>Wireframe</h2>
