--- a/project/orchestra.html
+++ b/project/orchestra.html
@@ -49,6 +49,7 @@
                 <li>Orchestra sectionals: 1h of orchestra rehearsal with just the section that plays the same part.</li>
                 <li>Orchestra rehearsal: 3h of orchestra rehearsal.</li>
             </ul>          
+            <p>All classes are held in Casablanca's Cultural Center. Address: Av. Portales N°2</p>
         </div>
     </main>
     <footer>
